program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -959,6 +959,8 @@ msgid ""
 "  --stop-after-video-ends  Stops processing after the primary video track ends,\n"
 "                           discarding any remaining packets of other tracks.\n"
 msgstr ""
+"  --stop-after-video-ends Deixa de processar una vegada finalitzi la pista de vídeo\n"
+"                           principal, descartant els paquets restants d'altres pistes.\n"
 
 #: src/merge/mkvmerge.cpp:374
 #, no-c-format
@@ -3958,7 +3960,7 @@ msgstr "Analitza fluxos de bits MPEG4, situa cada fotograma en un bloc de Matros
 #: src/mkvtoolnix-gui/merge/output.cpp:251
 #, no-c-format
 msgid "Any later packets of other tracks will be discarded."
-msgstr ""
+msgstr "Es descartaran els paquets posteriors d'altres pistes."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:252
 #: src/mkvtoolnix-gui/merge/output.cpp:253
@@ -7765,9 +7767,9 @@ msgid "If this option is enabled, the file title will be used as the basis for t
 msgstr "Si aquesta opció està habilitada, si s'estableix un títol de fitxer, aquest s'emprarà com a base per al nom del fitxer de destinació."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:541
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If this option is enabled, the name of the directory the file is located in will be used as the basis for the destination file name."
-msgstr "Si aquesta opció està habilitada, si s'estableix un títol de fitxer, aquest s'emprarà com a base per al nom del fitxer de destinació."
+msgstr "Si aquesta opció està habilitada, el nom del directori on es troba el fitxer s'usarà com a base per al nom del fitxer de destinació."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:394
 #, no-c-format
@@ -10897,7 +10899,7 @@ msgstr "SHA1-160"
 #: src/common/kax_info.cpp:854
 #, no-c-format
 msgid "SMPTE ST 12-1 timecodes"
-msgstr ""
+msgstr "Codis de temps ST 12-1 de SMPTE"
 
 #: src/common/file_types.cpp:102
 #, no-c-format
@@ -11829,9 +11831,9 @@ msgid "Stop &after all running jobs have finished"
 msgstr "Atura &després de finalitzar les tasques en execució"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2281
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stop after video track ends"
-msgstr "Estableix si el vídeo és entrellaçat."
+msgstr "Atura una vegada finalitzi la pista de vídeo"
 
 #: src/mkvtoolnix-gui/forms/info/job_settings_widget.h:163
 #, no-c-format
@@ -11841,7 +11843,7 @@ msgstr "Atura al primer clúster"
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
 msgid "Stops processing after the primary video track ends."
-msgstr ""
+msgstr "Deixa de processar una vegada finalitzi la pista de vídeo principal."
 
 #: src/common/hacks.cpp:46
 #, no-c-format
@@ -14746,9 +14748,9 @@ msgid "Use the &title as the base file name if a title is set"
 msgstr "Si s'estableix un &títol, empra'l com el nom del fitxer base"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2257
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use the input file's &directory name instead of the file name"
-msgstr "Altrament, el nom del fitxer de destinació derivarà del/s nom/s del/s fitxer/s d'origen."
+msgstr "Usa el nom del &directori del fitxer d'entrada en lloc del nom del fitxer"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:562
 #, no-c-format
@@ -15763,9 +15765,9 @@ msgid "checkerboard (right first)"
 msgstr "Tauler d'escacs (primer dreta)"
 
 #: src/common/kax_info.cpp:852
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "codec-specific"
-msgstr "Dades específiques de la projecció:"
+msgstr "específic del còdec"
 
 #: src/common/stereo_mode.cpp:59
 #, no-c-format
