program translations: update Brazilian Portuguese

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -9,7 +9,7 @@ msgstr ""
 "POT-Creation-Date: 2023-04-06 16:41+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>, 2021-2023\n"
-"Language-Team: Portuguese (Brazil) (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/pt_BR/)\n"
+"Language-Team: Portuguese (Brazil) (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/pt_BR/)\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -936,6 +936,8 @@ msgid ""
 "  --stop-after-video-ends  Stops processing after the primary video track ends,\n"
 "                           discarding any remaining packets of other tracks.\n"
 msgstr ""
+"  --stop-after-video-ends  Interrompe o processamento após o fim da faixa de vídeo principal,\n"
+"                           descartando quaisquer pacotes restantes de outras faixas.\n"
 
 #: src/merge/mkvmerge.cpp:374
 #, no-c-format
@@ -3935,7 +3937,7 @@ msgstr "Analisar fluxos de bits MPEG4, colocar cada quadro em um bloco Matroska,
 #: src/mkvtoolnix-gui/merge/output.cpp:251
 #, no-c-format
 msgid "Any later packets of other tracks will be discarded."
-msgstr ""
+msgstr "Quaisquer pacotes posteriores de outras faixas serão descartados."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:252
 #: src/mkvtoolnix-gui/merge/output.cpp:253
@@ -7741,9 +7743,9 @@ msgid "If this option is enabled, the file title will be used as the basis for t
 msgstr "Se esta opção for ativada, o título do arquivo será usado como base para o nome do arquivo de destino se um título de arquivo for definido."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:541
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If this option is enabled, the name of the directory the file is located in will be used as the basis for the destination file name."
-msgstr "Se esta opção for ativada, o título do arquivo será usado como base para o nome do arquivo de destino se um título de arquivo for definido."
+msgstr "Se esta opção estiver ativada, o nome do diretório no qual o arquivo está localizado será usado como base para o nome do arquivo de destino."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:394
 #, no-c-format
@@ -10880,7 +10882,7 @@ msgstr "SHA1-160"
 #: src/common/kax_info.cpp:854
 #, no-c-format
 msgid "SMPTE ST 12-1 timecodes"
-msgstr ""
+msgstr "Códigos de tempo SMPTE ST 12-1"
 
 #: src/common/file_types.cpp:102
 #, no-c-format
@@ -11816,9 +11818,9 @@ msgid "Stop &after all running jobs have finished"
 msgstr "P&arar depois que todas as tarefas em execução forem concluídas"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2281
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stop after video track ends"
-msgstr "Define se o vídeo é entrelaçado."
+msgstr "Parar após o fim da faixa de vídeo"
 
 #: src/mkvtoolnix-gui/forms/info/job_settings_widget.h:163
 #, no-c-format
@@ -11828,7 +11830,7 @@ msgstr "Parar no primeiro cluster"
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
 msgid "Stops processing after the primary video track ends."
-msgstr ""
+msgstr "Interromper processamento após o fim da faixa de vídeo principal"
 
 #: src/common/hacks.cpp:46
 #, no-c-format
@@ -14736,9 +14738,9 @@ msgid "Use the &title as the base file name if a title is set"
 msgstr "Usar &título como o nome do arquivo base se um título for definido"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2257
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use the input file's &directory name instead of the file name"
-msgstr "Caso contrário, o nome do arquivo de destino será derivado dos nomes dos arquivos de origem."
+msgstr "Use o nome do &diretório do arquivo de entrada em vez do nome do arquivo"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:562
 #, no-c-format
@@ -15753,9 +15755,9 @@ msgid "checkerboard (right first)"
 msgstr "tabuleiro (direita primeiro)"
 
 #: src/common/kax_info.cpp:852
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "codec-specific"
-msgstr "Dados específicos da projeção:"
+msgstr "específico do codec"
 
 #: src/common/stereo_mode.cpp:59
 #, no-c-format
