--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2023-04-08 17:35+0200\n"
+"POT-Creation-Date: 2023-04-30 12:23+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2023\n"
 "Language-Team: Catalan (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
@@ -29,8 +29,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "75.0.0"
-msgstr "75.0.0"
+msgid "76.0"
+msgstr "76.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -38,7 +38,9 @@ msgstr "75.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2023-03-26"
+#, fuzzy
+#| msgid "2023-03-26"
+msgid "2023-04-30"
 msgstr "26/06/2023"
 
 #. type: Content of the mkvmerge entity
