--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (76.0-0~bunkus01) lunar; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 30 Apr 2023 12:23:16 +0200
+
 mkvtoolnix (75.0.0-0~bunkus01) kinetic; urgency=low
 
   * New version.
