program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -2025,7 +2025,7 @@ msgstr "&Primera entrada a tornar a numerar:"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2173
 #, no-c-format
 msgid "&Font && size:"
-msgstr "&Tipus de lletra i mida:"
+msgstr "&Lletra i mida:"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:385
 #, no-c-format
@@ -3121,7 +3121,7 @@ msgstr "S'ha trobat un bloc en el codi de temps {0} per al número de pista {1}.
 #: src/mkvtoolnix-gui/merge/output.cpp:343
 #, no-c-format
 msgid "A chapter starting at 0s is never considered for splitting and discarded silently."
-msgstr "Un capítol que comença a 0 s mai serà considerat per a la divisió i serà descartat silenciosament."
+msgstr "Un capítol que comença als 0 s mai serà considerat per a la divisió i serà descartat silenciosament."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:309
 #, no-c-format
@@ -6361,7 +6361,7 @@ msgstr "Habilita el diàleg del guany de &normalització per a eliminar pistes d
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2203
 #, no-c-format
 msgid "Enable language codes from &ISO 639-3 && 639-5"
-msgstr "Habilita els codis d'idioma des de &ISO 639-3 fins a 639-5"
+msgstr "Habilita els codis d'idioma des d'&ISO 639-3 fins a 639-5"
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:169
 #, no-c-format
@@ -7548,7 +7548,7 @@ msgstr "Si està habilitada, la IGU eliminarà el fitxer de sortida creat per un
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:322
 #, no-c-format
 msgid "If enabled, the GUI will use legacy MIME types when detecting the MIME type of font attachments instead of the current standard MIME types."
-msgstr "Si està habilitada, la IGU usarà els tipus MIME heretats quan detecti el tipus MIME dels adjunts de tipus de lletra en lloc dels tipus MIME estàndard actuals."
+msgstr "Si està habilitada, la IGU usarà els tipus MIME heretats quan detecti el tipus MIME dels adjunts de lletra tipogràfica en lloc dels tipus MIME estàndard actuals."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:419
 #, no-c-format
@@ -7625,7 +7625,7 @@ msgstr "Si s'especifiquen més UID del segment que segments, llavors s'ignoraran
 #: src/mkvtoolnix-gui/merge/input.cpp:594
 #, no-c-format
 msgid "If no unit is given, 'fps' will be used."
-msgstr "Si no es dóna la unitat, s'usaran els «fps»."
+msgstr "Si no es dona la unitat, s'usaran els «fps»."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:314
 #: src/mkvtoolnix-gui/merge/output.cpp:330
@@ -7801,7 +7801,7 @@ msgstr "S'ignora una entrada que comença després del final ({0}).\n"
 #: src/input/subtitles.cpp:578
 #, no-c-format
 msgid "Imported font from {0}"
-msgstr "Tipus de lletra importat des de {0}"
+msgstr "Lletra importada des de {0}"
 
 #: src/input/subtitles.cpp:578
 #, no-c-format
@@ -8364,7 +8364,7 @@ msgstr "Data i hora d'inici de la tasca en format ISO 8601"
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:90
 #, no-c-format
 msgid "Job succeeded"
-msgstr "Tasca realitzada amb èxit"
+msgstr "Tasca acomplerta amb èxit"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:242
 #, no-c-format
@@ -8743,9 +8743,9 @@ msgstr "Marca aquesta pista com a «Força el mostrar»."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:657
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:668
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Markdown files"
-msgstr "Fitxers del Matroska"
+msgstr "Fitxers en Markdown"
 
 #: src/common/file_types.cpp:91
 #, no-c-format
@@ -9418,7 +9418,7 @@ msgstr "Normalitzar totes les etiquetes BCP 47 de la IETF dels elements modifica
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:339
 #, no-c-format
 msgid "Normally completed jobs stay in the queue even over restarts until the user clears them out manually."
-msgstr "Normalment les tasques finalitzades romandran a la llista de tasques fins que l'usuari les elimini manualment."
+msgstr "Normalment, les tasques finalitzades romandran a la llista de tasques fins que l'usuari les elimini manualment."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:597
 #, no-c-format
@@ -10941,9 +10941,9 @@ msgid "Sampling frequency in Hz."
 msgstr "Freqüència de mostreig en Hz."
 
 #: src/mkvtoolnix-gui/util/text_display_dialog.cpp:106
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save"
-msgstr "De&sa"
+msgstr "Desa"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:666
 #, no-c-format
@@ -11009,9 +11009,9 @@ msgid "Saving the chapters failed."
 msgstr "El desament dels capítols ha fallat."
 
 #: src/mkvtoolnix-gui/util/file.cpp:150
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Saving the file failed. Error message from the system: %1"
-msgstr "Missatge d'error des de l'analitzador: %1"
+msgstr "El desament del fitxer ha fallat. Missatge d'error del sistema: %1"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
@@ -11329,7 +11329,7 @@ msgstr "Estableix els i&diomes dels noms del capítol:"
 #: src/propedit/propedit_cli_parser.cpp:256
 #, no-c-format
 msgid "Set the charset to use when reading chapter files using the simple chapter format"
-msgstr "Estableix el joc de caràcters a usar quan quan es llegeixin els fitxers de capítols mitjançant el format de capítol senzill"
+msgstr "Estableix el joc de caràcters a usar quan es llegeixin els fitxers de capítols mitjançant el format de capítol senzill"
 
 #: src/propedit/propedit_cli_parser.cpp:266
 #, no-c-format
@@ -12610,7 +12610,7 @@ msgstr "Els valors extrets per a l'amplada i alçada del vídeo des del flux de 
 #: src/extract/extract_cli_parser.cpp:117
 #, no-c-format
 msgid "The fifth mode tries to extract chapter information and tags and outputs them as a cue sheet. This is the reverse of using a cue sheet with mkvmerge's '--chapters' option."
-msgstr "El cinquè mode intenta extreure la informació dels capítols i les etiquetes, i dóna la sortida com un full de muntatge. Això és el contrari d'emprar un full de muntatge amb l'opció «--chapters» del «mkvmerge»."
+msgstr "El cinquè mode intenta extreure la informació dels capítols i les etiquetes, i dona la sortida com un full de muntatge. Això és el contrari d'emprar un full de muntatge amb l'opció «--chapters» del «mkvmerge»."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:276
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:947
@@ -13102,7 +13102,7 @@ msgstr "Per a indicar la UTC es pot usar la lletra «Z» en comptes del desplaç
 #: src/mkvtoolnix-gui/merge/output.cpp:267
 #, no-c-format
 msgid "The letters 'G', 'M' and 'K' can be used to indicate giga/mega/kilo bytes respectively."
-msgstr "Les lletres «G», «M» i «K» es poden emprar per a indicar giga-/mega-/kilo- bytes, respectivament."
+msgstr "Les lletres «G», «M» i «K» es poden emprar per a indicar giga-/mega-/kilobytes, respectivament."
 
 #: src/merge/timestamp_factory.cpp:218
 #, no-c-format
@@ -13400,7 +13400,7 @@ msgstr "L'script «%1» està obsolet."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:460
 #, no-c-format
 msgid "The script '%1' should not be used for the language '%2' as it is the script the overwhelming majority of documents for this language is written in."
-msgstr "L'script «%1» no s'ha d'emprar per a l'idioma «%2», ja que és l'script amb el que s'ha escrit la majoria aclaparadora dels documents per a aquest idioma."
+msgstr "L'script «%1» no s'ha d'emprar per a l'idioma «%2», ja que és l'script amb el qual s'ha escrit la majoria aclaparadora dels documents per a aquest idioma."
 
 #: src/extract/extract_cli_parser.cpp:91
 #, no-c-format
@@ -13581,7 +13581,7 @@ msgid ""
 msgstr ""
 "El fitxer del codi de temps v2 «{0}» conté codis de temps sense ordenar. A causa d'un error del «mkvmerge» que hi havia fins a la versió 1.5.0, això era necessari si la pista a la qual es va aplicar el fitxer del codi de temps contenia fotogrames B. A partir de la versió 1.5.1 del «mkvmerge» els codis de temps s'ordenen correctament al fitxer del codi de temps. Per exemple, la seqüència de fotogrames «IPBBP...» a 25 FPS requereix un fitxer del codi de temps en el que els primers codis de temps siguin «0», «40», «80», «120», etc., i no «0», «120», «40», «80», etc.\n"
 "\n"
-"Si tot i això encara us cal realment especificar codis de temps sense ordenar, useu el format v4 del codi de temps. És idèntic al format v2, però permet codis de temps sense ordenar.\n"
+"Si, tot i això, encara us cal realment especificar codis de temps sense ordenar, useu el format v4 del codi de temps. És idèntic al format v2, però permet codis de temps sense ordenar.\n"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:286
 #, no-c-format
@@ -14048,7 +14048,7 @@ msgstr "Aquest mode només considera el nivell superior dels capítols, a travé
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:323
 #, no-c-format
 msgid "This mostly affects TrueType fonts for which the legacy MIME type ('application/x-truetype-font') might be more widely supported than the standard MIME types ('font/sfnt' and 'font/ttf')."
-msgstr "Això afectarà principalment als tipus de lletra TrueType per a les que el tipus MIME heretat («application/x-truetype-font») pot ser més admès que els tipus MIME estàndard («font/sfnt» i «font/ttf»)."
+msgstr "Això afectarà principalment a les lletres TrueType per a les que el tipus MIME heretat («application/x-truetype-font») pot ser més admès que els tipus MIME estàndard («font/sfnt» i «font/ttf»)."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:620
 #, no-c-format
@@ -14739,7 +14739,7 @@ msgstr "Usa els valors fixats per als elements que canvien d'un fitxer a un altr
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2183
 #, no-c-format
 msgid "Use legac&y MIME types for font attachments"
-msgstr "Empra els tipus MIME heretats per als ad&junts de tipus de lletra"
+msgstr "Empra els tipus MIME heretats per als ad&junts de lletra tipogràfica"
 
 #: src/propedit/propedit_cli_parser.cpp:245
 #, no-c-format
@@ -16188,7 +16188,7 @@ msgstr "mkvmerge -o sortida [opcions globals] [opcions_1] <fitxer_1> [@fitxer_d_
 #: src/mkvtoolnix-gui/merge/output.cpp:243
 #, no-c-format
 msgid "mkvmerge also turns this on if the destination file name's extension is \"webm\"."
-msgstr "EL «mkvmerge» també activa això si l'extensió del nom del fitxer de destinació és «.webm»."
+msgstr "El «mkvmerge» també ho activa si l'extensió del nom del fitxer de destinació és «.webm»."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:233
 #, no-c-format
