program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -8776,9 +8776,9 @@ msgstr "Marcar esta pista como \"visualización forzada\"."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:657
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:668
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Markdown files"
-msgstr "Archivos Matroska"
+msgstr "Archivos Markdown "
 
 #: src/common/file_types.cpp:91
 #, no-c-format
@@ -10980,9 +10980,9 @@ msgid "Sampling frequency in Hz."
 msgstr "Frecuencia de muestreo en Hz."
 
 #: src/mkvtoolnix-gui/util/text_display_dialog.cpp:106
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save"
-msgstr "&Guardar"
+msgstr "Guardar"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:666
 #, no-c-format
@@ -11048,9 +11048,9 @@ msgid "Saving the chapters failed."
 msgstr "Error al guardar capítulos."
 
 #: src/mkvtoolnix-gui/util/file.cpp:150
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Saving the file failed. Error message from the system: %1"
-msgstr "Mensaje de error del analizador: %1"
+msgstr "Error al guardar el archivo. Mensaje de error del sistema: %1"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
