program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -8698,9 +8698,9 @@ msgstr "Marquer cette piste comme « Affichage forcé »."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:657
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:668
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Markdown files"
-msgstr "Fichiers Matroska"
+msgstr "Fichiers Markdown"
 
 #: src/common/file_types.cpp:91
 #, no-c-format
@@ -10901,9 +10901,9 @@ msgid "Sampling frequency in Hz."
 msgstr "Fréquence d'échantillonnage en Hz."
 
 #: src/mkvtoolnix-gui/util/text_display_dialog.cpp:106
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save"
-msgstr "&Enregistrer…"
+msgstr "Enregistrer"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:666
 #, no-c-format
@@ -10969,9 +10969,9 @@ msgid "Saving the chapters failed."
 msgstr "L'enregistrement des chapitres a échoué."
 
 #: src/mkvtoolnix-gui/util/file.cpp:150
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Saving the file failed. Error message from the system: %1"
-msgstr "Message d'erreur de l'analyseur syntaxique : %1"
+msgstr "L'enregistrement du fichier a échoué. Message d'erreur du système : %1"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
