program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -8710,9 +8710,9 @@ msgstr "Contrassegna questa traccia come \"Visualizzazione forzata\"."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:657
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:668
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Markdown files"
-msgstr "File Matroska"
+msgstr "File Markdown"
 
 #: src/common/file_types.cpp:91
 #, no-c-format
@@ -10914,9 +10914,9 @@ msgid "Sampling frequency in Hz."
 msgstr "Frequenza di campionamento in Hz."
 
 #: src/mkvtoolnix-gui/util/text_display_dialog.cpp:106
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save"
-msgstr "&Salva"
+msgstr "Salva"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:666
 #, no-c-format
@@ -10982,9 +10982,11 @@ msgid "Saving the chapters failed."
 msgstr "Salvataggio dei capitoli non riuscito."
 
 #: src/mkvtoolnix-gui/util/file.cpp:150
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Saving the file failed. Error message from the system: %1"
-msgstr "Messaggio di errore dal parser: %1"
+msgstr ""
+"Salvataggio del file non riuscito. \n"
+"Messaggio di errore dal sistema: %1"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
