program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -8663,9 +8663,9 @@ msgstr "Bu izi \"zorlanan görüntü\" olarak işaretler."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:657
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:668
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Markdown files"
-msgstr "Matroska dosyaları"
+msgstr "Markdown dosyaları"
 
 #: src/common/file_types.cpp:91
 #, no-c-format
@@ -10809,7 +10809,7 @@ msgstr "SHA1-160"
 #: src/common/kax_info.cpp:854
 #, no-c-format
 msgid "SMPTE ST 12-1 timecodes"
-msgstr ""
+msgstr "SMPTE ST 12-1 zaman kodları"
 
 #: src/common/file_types.cpp:102
 #, no-c-format
@@ -10858,9 +10858,9 @@ msgid "Sampling frequency in Hz."
 msgstr "Hz. olarak örnekleme sıklığı"
 
 #: src/mkvtoolnix-gui/util/text_display_dialog.cpp:106
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Save"
-msgstr "&Kaydet"
+msgstr "Kaydet"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:666
 #, no-c-format
@@ -10926,9 +10926,9 @@ msgid "Saving the chapters failed."
 msgstr "Bölümleri kaydetme başarısız oldu."
 
 #: src/mkvtoolnix-gui/util/file.cpp:150
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Saving the file failed. Error message from the system: %1"
-msgstr "Ayrıştırıcıdan gelen hata iletisi: %1"
+msgstr "Dosyayı kaydetme başarısız oldu. Sistemden gelen hata iletisi: %1"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:255
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:264
@@ -11752,9 +11752,9 @@ msgid "Stop &after all running jobs have finished"
 msgstr "Tüm çalışan işler tamamlandıktan &sonra durdur"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2281
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Stop after video track ends"
-msgstr "Eğer görüntü geçişli ise ayarlayın."
+msgstr "Görüntü izi bittikten sonra dur"
 
 #: src/mkvtoolnix-gui/forms/info/job_settings_widget.h:163
 #, no-c-format
@@ -11764,7 +11764,7 @@ msgstr "İlk kümede durdur"
 #: src/mkvtoolnix-gui/merge/output.cpp:250
 #, no-c-format
 msgid "Stops processing after the primary video track ends."
-msgstr ""
+msgstr "Birincil görüntü izi sona erdikten sonra işlemeyi durdurur."
 
 #: src/common/hacks.cpp:46
 #, no-c-format
@@ -14673,9 +14673,9 @@ msgid "Use the &title as the base file name if a title is set"
 msgstr "Başlık ayarlanmışsa temel dosya adı olarak &başlığı kullan"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2271
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use the input file's &directory name instead of the file name"
-msgstr "Aksi halde hedef dosya adı kaynak dosya adlarından türetilir."
+msgstr "Dosya adı yerine giriş dosyasının &dizin adını kullan"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:562
 #, no-c-format
@@ -15690,9 +15690,9 @@ msgid "checkerboard (right first)"
 msgstr "denetleme tahtası (önce sağ)"
 
 #: src/common/kax_info.cpp:852
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "codec-specific"
-msgstr "İzdüşüme özgü veri:"
+msgstr "kodeke özgü"
 
 #: src/common/stereo_mode.cpp:59
 #, no-c-format
@@ -15762,7 +15762,7 @@ msgstr "şifreleme"
 #: src/common/kax_info.cpp:863
 #, no-c-format
 msgid "end credits"
-msgstr ""
+msgstr "kapanış jenerikleri"
 
 #: src/common/kax_info.cpp:711
 #, no-c-format
@@ -16257,7 +16257,7 @@ msgstr "ogg_sync_buffer başarısız\n"
 #: src/common/kax_info.cpp:862
 #, no-c-format
 msgid "opening credits"
-msgstr ""
+msgstr "açılış jenerikleri"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:127
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:131
